--- a/SquaredleSolver/View/MainWindow.xaml
+++ b/SquaredleSolver/View/MainWindow.xaml
@@ -42,6 +42,7 @@
         </TextBlock>
         <Border
             Width="160" Height="160" Margin="10,0,0,0"
+            Padding="10"
             BorderBrush="Black"
             Background="White"
             BorderThickness="1"
@@ -66,6 +67,7 @@
         </Border>
         <Border
             Width="160" Height="160" Margin="10,0,0,0"
+            Padding="10"
             VerticalAlignment="Center"
             HorizontalAlignment="Left">
             <view:FilterGrid
@@ -182,8 +184,11 @@
             <ItemsControl.ItemTemplate>
                 <DataTemplate>
                     <Border
+                        BorderBrush="Black"
+                        CornerRadius="3"
+                        BorderThickness="1"
                         Width="150"
-                        Height="150">
+                        d:Height="150">
                         <view:CharacterGrid/>
                     </Border>
                 </DataTemplate>
