--- a/SquaredleSolver/View/MainWindow.xaml
+++ b/SquaredleSolver/View/MainWindow.xaml
@@ -187,9 +187,14 @@
                         BorderBrush="Black"
                         CornerRadius="3"
                         BorderThickness="1"
-                        Width="150"
-                        d:Height="150">
-                        <view:CharacterGrid/>
+                        Width="100"
+                        d:Height="100">
+                        <StackPanel>
+                            <view:CharacterGrid d:Height="80"/>
+                            <TextBlock
+                                Text="{Binding Answer.Word}"
+                                TextAlignment="Center"/>
+                        </StackPanel>
                     </Border>
                 </DataTemplate>
             </ItemsControl.ItemTemplate>
